2002-08-02  SAITO Takuya <reed@lily.freemail.ne.jp>

	* its.el (its-previous-line): point-mim -> point-min (typo)

2002-07-20  SAITO Takuya <reed@lily.freemail.ne.jp>

	* egg.el (egg-activate-keymap-after-command): set-buffer to
	killed buffer.

2002-05-08  Katsumi Yamaoka  <yamaoka@jpl.org> (cf. [mule-ja:08306])

	* its.el (its-next-line, its-previous-line): New commands;
	substitute key definitions for `next-line' and `previous-line'
	with them in `its-mode-map'.

2001-12-01  ?

	* egg/wnn.el (wnn-server-info-list): Use `defvar' instead of
	`defconst' to define it.

2001-12-01  KATAYAMA Yoshio  <kate@pfu.fujitsu.com>

	* egg-x0213.el: New file.

2001-11-10  Kinji Itoh  <kinji-i@gray.plala.or.jp>
	(cf. http://cgi18.plala.or.jp/nyy/canna/canna-20011023-20011110.diff)

	* egg/canna.el (canna-server-port): Default to the string "canna".
	(cannna-open): Treat the port name as a string instead of a number.

2001-11-08  Kinji Itoh  <kinji-i@gray.plala.or.jp> (cf. [tamago:00546])

	* egg/canna.el (canna-set-converted-yomi): New function.
	(canna-start-conversion): Use it.
	(canna-change-bunsetsu-length): Use it.

2001-10-22  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
	(cf. [tamago:00534])

	* egg/canna.el (canna-word-delete-regist): Signal an error using
	`egg-error' if there is no text for yomi.

2001-08-16  KATAYAMA Yoshio  <kate@pfu.fujitsu.com> (cf. [tamago:00516])

	* its/greek.el: New file.

2001-07-24  KATAYAMA Yoshio  <kate@pfu.fujitsu.com> (cf. [tamago:00504])

	* eggrc (wnn7-jserver-setup): New function.

2001-06-28  Yoshiki Hayashi  <yoshiki@xemacs.org> (cf. [tamago:00468])

	* egg-cnv.el (egg-end-of-conversion-buffer): Replace
	`next-single-property-change' to `egg-next-single-property-change'.
	(egg-decide-before-point): Ditto.
	(egg-exit-conversion): Ditto.
	(egg-abort-conversion): Ditto.

	* egg.el (egg-last-method-name): Default to nil.

	* its-keydef.el: Set the default value of `its-select-func-alist'
	to nil.
