@@ -1,3 +1,9 @@
+2002-08-08  NIIBE Yutaka  <gniibe@m17n.org>
+
+	Added ANTHY support.
+	* egg/anthy.el egg/anthyipc.el: New files.
+	* leim-list.el: Added anthy.
+
 2002-08-02  SAITO Takuya <reed@lily.freemail.ne.jp>
 
 	* its.el (its-previous-line): point-mim -> point-min (typo)
